corrected container issue part one

--- a/great-idea/services/services.html
+++ b/great-idea/services/services.html
@@ -15,111 +15,113 @@
 </head>
 
 	<body>
-		<header class="mainHeader">
-			<div class = "container">
-				<nav class="navbar">
-					<ul>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Product</a></li>
-						<li><a href="#">Vision</a></li>
-						<li><a href="#">Features</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
+			<header class="mainHeader">
+				<div class = "container">
+					<nav class="navbar">
+						<ul>
+							<li><a href="#">Services</a></li>
+							<li><a href="#">Product</a></li>
+							<li><a href="#">Vision</a></li>
+							<li><a href="#">Features</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
 
-					<img class="logo" src="../img/logo.png" alt="Great Idea! Company logo.">
-				</nav>
+						<img class="logo" src="../img/logo.png" alt="Great Idea! Company logo.">
+					</nav>
 
-					<img class="services-header-img" src="../img/services-header.jpg" alt="Our services header image">
+						<img class="desktop" src="../img/services-header.jpg" alt="Our services header image">
 
-			</div>
-			<div class="service">
-				<h1>Services</h1>
+				</div>
+				
+			</header>
+			
+				<div class="service">
+					<h1>Services</h1>
 
-				<p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-			</div>
-		</header>
-		<hr />
+					<p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+				</div>
+			<hr />
 
-		<section class="content">
-			<div class="container">
+			<section class="content">
+				<div class="container">
 
-				<div class="digitalDesign">
-					<h1>Digital Design</h1>
+					<div class="digitalDesign">
+						<h1>Digital Design</h1>
+							<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
+						<a href="#">Learn More</a>
+					</div>
+
+
+					<div class="ux">
+						<h1>UX / UI</h1>
+
 						<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 
-					<a href="#">Learn More</a>
+						<a href="#">Learn More</a>
+					</div>
+
+
+					<div class="digitalMarketing">
+						<h1>Digital Marketing</h1>
+
+						<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
+						<a href="#">Learn More</a>
+
+					</div>
+
+					<div class="webDevelopment">
+						<h1>Web Development</h1>
+
+						<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
+						<a href="#">Learn More</a>
+					</div>
+
+
+					<div class="ios">
+						<h1>iOS Development</h1>
+
+						<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
+						<a href="#">Learn More</a>
+					</div>
+
+
+					<div class="digitalMarketing">
+						<h1>Android Development</h1>
+
+						<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
+						<a href="#">Learn More</a>
+					</div>
+				</div>
+			</section>
+			<hr />
+
+			<section>
+				<div class="facts">
+					<div class="factP">
+						<h1>Some Facts About Our Services</h1>
+
+						<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+
+					</div>
+
+					<div class="bullets">
+						<p>Awesome thing</p>
+						<p>Amazing thing</p>
+						<p>Cool thing</p>
+						<p>Great thing</p>
+					</div>
 				</div>
 
-
-				<div class="ux">
-					<h1>UX / UI</h1>
-
-					<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-					<a href="#">Learn More</a>
-				</div>
-
-
-				<div class="digitalMarketing">
-					<h1>Digital Marketing</h1>
-
-					<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-					<a href="#">Learn More</a>
-
-				</div>
-
-				<div class="webDevelopment">
-					<h1>Web Development</h1>
-
-					<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-					<a href="#">Learn More</a>
-				</div>
-
-
-				<div class="ios">
-					<h1>iOS Development</h1>
-
-					<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-					<a href="#">Learn More</a>
-				</div>
-
-
-				<div class="digitalMarketing">
-					<h1>Android Development</h1>
-
-					<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-					<a href="#">Learn More</a>
-				</div>
-			</div>
-		</section>
-		<hr />
-
-		<section>
-			<div class="facts">
-				<div class="factP">
-					<h1>Some Facts About Our Services</h1>
-
-					<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-
-				</div>
-
-				<div class="bullets">
-					<p>Awesome thing</p>
-					<p>Amazing thing</p>
-					<p>Cool thing</p>
-					<p>Great thing</p>
-				</div>
-			</div>
-
-			<img class="services-info-img" src="../img/services-info.png" alt="one of our employees hard at work">
-		</section>
-		<footer>
-			Copyright Great Idea! 2018
-		</footer>
+				<img class="services-info-img" src="../img/services-info.png" alt="one of our employees hard at work">
+			</section>
+			<footer>
+				<p class="copyright">&copy; Copyright Great Idea! 2018</p>
+			</footer>
 	</body>
 </html>
